# PDF-Convert

./: .gitignore  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements.txt  start_web.ps1  word2pdf.py
backend/: app.py
backend/converters/: __init__.py  base_converter.py  from_pdf_converter.py  to_pdf_converter.py
docx/: FIXED_SUMMARY.md  PROJECT_SUMMARY.txt  TROUBLESHOOTING.md
frontend/: QUICKSTART.md
frontend/templates/: index.html
